--- a/section 5/bt_web_danang/css/style.css
+++ b/section 5/bt_web_danang/css/style.css
@@ -32,7 +32,7 @@
 
 .logo{
 	width: 35%;
-	padding-left: 60px;
+	padding-left: 40px;
 }
 
 .logo img{
@@ -313,3 +313,20 @@
     padding: 12px;
     padding-left: 20px;
 }
+
+@media screen and(min-width: 320px)
+{
+	#info {
+	    width: 100%;
+	    height: 50px !important;
+	    background-color: #bbb0b052;
+	}
+	#banner{
+		width: 100%;
+		height: 200px;
+	}
+	.logo, .menu{
+		float: none;
+	}
+}	
+
