--- a/section 10/slide jquery/chung.css
+++ b/section 10/slide jquery/chung.css
@@ -32,13 +32,13 @@
 	left: 0;
 }
 		
-@media screen and (max-width: 1024px){
+/*@media screen and (max-width: 1024px){
 	img.bg {
 		left: 50%;
 		margin-left: -512px; 
 	}
 }
-		
+		*/
 /*#page-wrap { 
 	position: relative;
 	width: 400px; 
